syntax = "proto3";

option go_package = "/";

import "google/protobuf/empty.proto";
import "proto/device.proto";

package user;

service Users {
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoRes);

  rpc AddToFavourite(ChangeCollectionReq) returns (google.protobuf.Empty);
  rpc RemoveFromFavourite(ChangeCollectionReq) returns (google.protobuf.Empty);
  rpc GetFavourite(GetCollectionReq) returns(GetCollectionRes);

  rpc AddToCart(ChangeCollectionReq) returns (google.protobuf.Empty);
  rpc RemoveFromCart(ChangeCollectionReq) returns (google.protobuf.Empty);
  rpc GetCart(GetCollectionReq) returns(GetCollectionRes);

  rpc TopUpBalance(BalanceReq) returns(BalanceRes);
  rpc DebitBalance(BalanceReq) returns(BalanceRes);

  rpc RemoveDeviceFromCollections(RemoveDeletedDeviceReq) returns(google.protobuf.Empty);
}

message GetUserInfoReq {
  string UserUUID = 1;
}

message GetUserInfoRes {
  string Username = 1;
  string Email = 2;
  string UUID = 3;
  float  Cash = 4;
}

message GetCollectionReq {
  string UserUUID = 1;
}

message GetCollectionRes {
  repeated device.Device Devices = 1;
}

message ChangeCollectionReq {
  string DeviceUUID = 1;
  string UserUUID = 2;
}

message BalanceReq {
  float Cash = 1;
  string UserUUID = 2;
}

message BalanceRes {
  float Cash = 1;
}

message RemoveDeletedDeviceReq {
  string DeviceUUID = 1;
}